<resources>
    <string name="app_name">TakCompanion</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pass_turn">Go</string>
    <string name="start_turn">Start</string>
    <string name="default_time">00:00</string>
    <string name="start_timer">S</string>
    <string name="pause_timer">P</string>
    <string name="reset_timer">R</string>

</resources>
