<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.kinsman.takcompanion.takcompanion.TimerFragment"
    android:padding="10dp">
        <View
            android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@android:color/darker_gray"
            android:id="@+id/dividerLine"
            android:layout_centerVertical="true"
            android:focusable="false"
            android:clickable="false"
            android:layout_toRightOf="@+id/bttn_reset"
            android:layout_toEndOf="@+id/bttn_reset"
            android:layout_toLeftOf="@+id/bttn_pause"
            android:layout_toStartOf="@+id/bttn_pause" />

        <ToggleButton
            android:text="@string/pass_turn"
            android:layout_width="120dp"
            android:id="@+id/player1Go"
            android:layout_gravity="center_horizontal"
            android:rotation="180"
            android:padding="10dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/player2Go"
            android:layout_alignStart="@+id/player2Go"
            android:onClick="player1Click"
            android:textOff="@string/start_turn"
            android:textOn="@string/pass_turn" />

        <Button
            android:text="@string/reset_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bttn_reset"
            android:onClick="resetClick"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ToggleButton
            android:textOff="@string/pause_timer"
            android:textOn="@string/start_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/bttn_pause"
            android:onClick="pauseClick"/>

        <ToggleButton
            android:text="@string/pass_turn"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:id="@+id/player2Go"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="player2Click"
            android:textOff="@string/start_turn"
            android:textOn="@string/pass_turn" />

        <TextView
            android:text="@string/default_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:id="@+id/player2Timer"
            android:textSize="75sp"
            android:textAlignment="center"
            android:padding="20dp"
            android:layout_below="@+id/bttn_pause"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/default_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player1Timer"
            android:rotation="180"
            android:textSize="75sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:padding="20dp"
            android:layout_above="@+id/bttn_reset"
            android:layout_alignLeft="@+id/player2Timer"
            android:layout_alignStart="@+id/player2Timer" />

</RelativeLayout>
